<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballcount.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/team_arsenal"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/score"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/team_A_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/initial_point"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="teamAShoot"
                android:text="@string/shoot"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="teamAFoul"
                android:text="fouls"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="teamAChangePlayer"
                android:text="@string/change_player"
                android:textSize="20sp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/team_roma"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:text="@string/score"
                android:textAllCaps="true"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/team_B_score"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:text="@string/initial_point"
                android:textSize="40sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="teamBShoot"
                android:text="@string/shoot"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:onClick="teamBFoul"
                android:text="fouls"
                android:textSize="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:onClick="teamBChangePlayer"
                android:text="@string/change_player"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="20sp" />
</RelativeLayout>
</ScrollView>